--- a/public/style.css
+++ b/public/style.css
@@ -1,4 +1,24 @@
+body {
+  background-color: #2c2c2c;
+}
+
 main {
+  overflow: hidden;
+}
+
+#logo {
+  width: 250px;
+  display: block;
+  margin: 25px auto;
+  margin-bottom: -45px;
+}
+
+.wrap {
+  max-width: 375px;
+  margin: 25px auto;
+
+  border: 2px solid black;
+  border-radius: 8px;
   overflow: hidden;
 }
 
@@ -6,7 +26,7 @@ main {
   padding: 10px;
   border-bottom: 2px solid black;
   text-align: center;
-  background-color: #F8F8F8;
+  background-color: #f8f8f8;
 }
 
 .wdgt-searchbar {
@@ -25,18 +45,17 @@ a.list-group-item {
 }
 
 a.list-group-item:hover {
-  background-color: #F8F8F8;
+  background-color: #f8f8f8;
   color: black;
 }
 
 .wdgt-content {
-  height: 500px;
   overflow: hidden;
   overflow-y: auto;
+  background-color: white;
 }
 
 .wdgt-toolbar span {
-
   text-align: center;
 }
 
@@ -54,7 +73,7 @@ a.list-group-item:hover {
 }
 
 .show {
-  transition: .7s;
+  transition: 0.7s;
   right: 0%;
 }
 
@@ -84,7 +103,7 @@ a.list-group-item:hover {
 
 .form-control {
   border: 2px solid black;
-	margin-bottom: 15px;
+  margin-bottom: 15px;
 }
 
 .list-group-item {
@@ -96,9 +115,9 @@ a.list-group-item:hover {
   border-top: 2px solid black;
 }
 
-label{
-	text-transform: uppercase;
-	font-size: 14px;
-	letter-spacing: 0.03em;
-	margin-bottom: 3px;
+label {
+  text-transform: uppercase;
+  font-size: 14px;
+  letter-spacing: 0.03em;
+  margin-bottom: 3px;
 }
