--- a/public/style.css
+++ b/public/style.css
@@ -121,3 +121,19 @@ label {
   letter-spacing: 0.03em;
   margin-bottom: 3px;
 }
+
+.info {
+  font-family: "Domine", serif;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 19px;
+  max-width: 600px;
+  margin: 0 auto;
+  padding: 15px;
+  background-color: #fff3cd;
+  color: #856404;
+  margin-top: 5px;
+  text-align: center;
+  border: 2px solid #856404;
+  border-radius: 4px;
+}
